# algorithm-visualizer

./: .clang-format  CMakeLists.txt  README.md
include/: StateVariables.hpp
include/menus/: MainMenu.hpp  PathfindingMenu.hpp  SortingMenu.hpp
include/utils/: View.hpp
include/visualizers/: PathfindingVisualizer.hpp  SortingVisualizer.hpp
src/: Main.cpp  StateVariables.cpp
src/menus/: MainMenu.cpp  PathfindingMenu.cpp  SortingMenu.cpp
src/utils/: View.cpp
src/visualizers/: PathfindingVisualizer.cpp  SortingVisualizer.cpp
